data manager + id repo + request manager written
